# 5D-Interpolator

./: .gitignore  README.md  docker-compose.yml  run.sh
backend/: Dockerfile  main.py  pyproject.toml
backend/5dinterpolator/: data_handling.py  main.py  orchestrator.py
backend/5dinterpolator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/interpolator_5d/: data_handling.py  network.py  orchestrator.py
frontend/: Dockerfile
frontend/src/app/: page.tsx
