[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpolator_5d"
version = "0.1.0"
description = "5D interpolator using neural networks, part of the backend of a 5d interpolator web app"
authors = [
  { name = "Danilo de Souza"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy >=1.23",
  "fastapi >=0.100.0",
  "pandas >=2.0.0",
  "scikit-learn >=1.3.0",
  "uvicorn[standard] >=0.22.0",
  "python-multipart >=0.0.6",
]